# solana-optimistic-rollup

./: .gitignore
batcher-node/: Cargo.toml
batcher-node/src/: main.rs
rollup-contract/: Cargo.toml
rollup-contract/src/: lib.rs
sequencer-node/: Cargo.toml
sequencer-node/src/: main.rs
validator-node/: Cargo.toml
validator-node/src/: main.rs
