[package]
name = "sequencer-node"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.22"
solana-client = "1.10.32"  # Ensure this is the correct version for your setup
solana-sdk = "1.10.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"